crates/tokmd-model/tests/snapshots/snapshots__empty_export.snap
---
source: crates/tokmd-model/tests/snapshots.rs
expression: "serde_json::json!({ \"rows\": data.rows.len(), })"
---
{
  "rows": 0
}
