crates/tokmd-model/tests/snapshots/snapshots__empty_lang_report.snap
---
source: crates/tokmd-model/tests/snapshots.rs
expression: "serde_json::json!({\n    \"rows\": report.rows.len(), \"total_code\": report.total.code, \"total_lines\":\n    report.total.lines, \"total_bytes\": report.total.bytes, \"total_tokens\":\n    report.total.tokens, \"total_files\": report.total.files,\n})"
---
{
  "rows": 0,
  "total_bytes": 0,
  "total_code": 0,
  "total_files": 0,
  "total_lines": 0,
  "total_tokens": 0
}
