crates/tokmd-model/tests/snapshots/snapshots__file_rows_separate.snap
---
source: crates/tokmd-model/tests/snapshots.rs
assertion_line: 135
expression: redacted
---
[
  {
    "code_gt_zero": false,
    "kind": "Child",
    "lang": "Markdown",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/lib.rs"
  },
  {
    "code_gt_zero": true,
    "kind": "Parent",
    "lang": "Rust",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/lib.rs"
  },
  {
    "code_gt_zero": false,
    "kind": "Child",
    "lang": "Markdown",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/module_key/mod.rs"
  },
  {
    "code_gt_zero": true,
    "kind": "Parent",
    "lang": "Rust",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/module_key/mod.rs"
  },
  {
    "code_gt_zero": false,
    "kind": "Child",
    "lang": "Markdown",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/sorting.rs"
  },
  {
    "code_gt_zero": true,
    "kind": "Parent",
    "lang": "Rust",
    "lines_eq_sum": true,
    "module": "<root>",
    "path": "crates/tokmd-model/src/sorting.rs"
  }
]
