crates/tokmd-model/tests/snapshots/snapshots__lang_collapse_shape.snap
---
source: crates/tokmd-model/tests/snapshots.rs
expression: redacted
---
[
  {
    "code_gt_zero": true,
    "files_gt_zero": true,
    "lang": "Rust",
    "lines_gte_code": true
  }
]
