crates/tokmd-model/tests/snapshots/snapshots__module_shape.snap
---
source: crates/tokmd-model/tests/snapshots.rs
expression: redacted
---
[
  {
    "code_gt_zero": true,
    "files_gt_zero": true,
    "lines_gte_code": true,
    "module": "app"
  }
]
